Made longer slides titles, mostly used on code example slides, stop wrapping. The wrapping pushed the content down potentially creating unneeded scrollbars

--- a/src/components/Slides/default.less
+++ b/src/components/Slides/default.less
@@ -1,6 +1,6 @@
 .slide {
   background-color: blue;
-  background: url(../../../public/images/gradient_background-dark-01.png) no-repeat center center fixed; 
+  background: url(../../../public/images/gradient_background-dark-01.png) no-repeat center center fixed;
   background-size: cover;
   color: white;
 
@@ -14,7 +14,6 @@
   .title {
     min-height: 100px;
     padding: 50px 0 15px 0;
-    max-width: 1028px;
     text-align: center;
     margin: auto;
     font-weight: bold;
@@ -45,7 +44,7 @@
     background: #FCFF42;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
-    text-align: center;   
+    text-align: center;
   }
 
   .button:hover {
@@ -53,17 +52,17 @@
     cursor: pointer;
     text-decoration: none;
   }
- 
+
   .content-wide {
     width: 100%;
-    
+
     .playground {
-      overflow: hidden; 
+      overflow: hidden;
       .playgroundCode {
         width: 50%;
         font-size: 2em;
         background-color: rgba(0, 0, 0, 0.6);
-        
+
         .playgroundStage {
           padding: 5%;
           .CodeMirror {
@@ -77,11 +76,11 @@
         font-size: 2em;
       }
     }
-    
+
 
     .CodeMirror {
       background-color: rgba(0, 0, 0, 0);
-    }   
+    }
   }
 }
 
